# shellsmith

./: .coveragerc  .gitignore  README.md  compose.override.yaml  compose.yaml  mkdocs.yml  pyproject.toml
.github/workflows/: python-package.yaml  test.yaml
docs/: api.md  cli.md  contributing.md  index.md
docs/stylesheets/: extra.css
scripts/: section.py
src/shellsmith/: __init__.py  __main__.py  api.py  clients.py  config.py  neo4j.py  services.py  upload.py  utils.py
src/shellsmith/cli/: main.py  parser.py  pretty.py
src/shellsmith/cli/commands/: __init__.py  base64.py  info.py  nuke.py  shell.py  sme.py  submodel.py  upload.py
src/shellsmith/crud/: __init__.py  shells.py  submodels.py
src/shellsmith/mcp/: server.py
tests/: conftest.py  test_cli.py  test_cli_integration.py  test_crud.py  test_services.py  test_upload.py  test_utils.py
tests/api/: test_shells.py  test_submodels.py
tests/cli/: test_cli_decode.py  test_cli_encode.py  test_cli_help.py  test_cli_info.py  test_cli_nuke.py  test_cli_upload.py  test_pretty.py  test_simplify.py
tests/cli/groups/: test_cli_create.py  test_cli_delete.py  test_cli_get.py  test_cli_update.py
tests/client/: test_async_client.py  test_client.py
tests/crud/: test_shells.py  test_submodels.py
