[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shellsmith"
version = "0.2.1"
description = "A Python toolkit and CLI for managing Asset Administration Shells"
authors = [{ name = "Peter Stein", email = "peterstein@dfki.de" }]
license = { file = "LICENSE" }
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "pydantic-settings",
    "requests",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
    "pytest-dotenv",
    "ruff",
]

neo4j = [
    "neo4j",
]

[project.scripts]
aas = "shellsmith.cli.main:main"

[project.urls]
Homepage = "https://github.com/ptrstn/shellsmith"
Issues = "https://github.com/ptrstn/shellsmith/issues"

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "N",  # pep8-naming
    "UP", # pyupgrade
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
