[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shellsmith"
version = "0.3.0"
authors = [{ name = "Peter Stein", email = "peter.stein@dfki.de" }]
description = "A Python SDK and CLI for Eclipse BaSyx to manage Asset Administration Shells (AAS)"
license = { file = "LICENSE" }
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.10"
classifiers = [
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = [
    "aas",
    "asset-administration-shell",
    "basyx",
    "eclipse-basyx",
    "industry40",
    "i40",
    "digital-twin",
    "cli",
    "typer",
    "rest-client",
    "python",
]
dependencies = [
    "httpx",
    "pydantic-settings",
    "pyyaml",
    "typer",
]

[project.optional-dependencies]
test = [
    "mypy",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-dotenv",
    "ruff",
    "types-pyyaml",
    "types-requests"
]
docs = [
    "mkdocs",
    "mkdocs-material",
    "termynal",
]
neo4j = [
    "neo4j",
]

[project.scripts]
aas = "shellsmith.cli.app:main"

[project.urls]
Homepage = "https://github.com/ptrstn/shellsmith"
Issues = "https://github.com/ptrstn/shellsmith/issues"
Documentation = "https://shellsmith.pages.dev"

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
select = [
    "ANN",  # flake8-annotations
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "D",    # pydocstyle
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "PL",   # pylint
    "SIM",  # flake8-simplify
    "UP",   # pyupgrade
    "W",    # pycodestyle warnings
]

ignore = [
    "ANN401",  # Allow Any types
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["D104", "F401"]
"tests/**/test_*.py" = ["ANN", "PL"]
"tests/**/*.py" = ["D"]

[tool.ruff.lint.pydocstyle]
convention = "google"
